--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://8020coding.github.io/portfolio-project-tutorial/",
+  "homepage": "https://github.com/nadjaantonjak/re-portfolio",
   "name": "portfolio-project",
   "version": "0.1.0",
   "private": true,
