--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/nadjaantonjak/re-portfolio",
+  "homepage": "https://nadjaantonjak.github.io/re-portfolio/",
   "name": "portfolio-project",
   "version": "0.1.0",
   "private": true,
